--- a/index.html
+++ b/index.html
@@ -1,1 +1,1 @@
-<span class="copyright">Design: <a href="http://redmango22.github.io">REDMAGO22</a>.</span>
+<span> class="copyright">Design: <a href="http://redmango22.github.io">REDMAGO22</a>.</span>
